# task_challenge

./: .dockerignore  .gitignore  Dockerfile  SOLUTION.md  alembic.ini  docker-compose.yml  init.sql  main.py  pyproject.toml
alembic/versions/: b33a426b9f82_initial_migration.py  e98698c5ef53_initial_migration.py
app/: admin.py  app.py  models.py  scheduler.py  schema.py  tasks.py
