[project]
name = "task-challenge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.0",
    "pytz>=2025.2",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.43",
    "sqladmin>=0.21.0",
    "uvicorn>=0.35.0",
]
